# opencast-obs-plugin

./: .gitignore  CMakeLists.txt  Contributors.md  README.md
docs/: _config.yml  building.md  index.md  mkdocs.yml
docs/docs/: index.md
src/: obsOpencastIngestPlugin.cpp  obsOpencastIngestPlugin.hpp  utilsAndConfig.cpp  utilsAndConfig.hpp
src/moc/: dialogopencast.cpp  dialogopencast.h  guiLauncher.cpp  guiLauncher.h  infoBox.cpp  infoBox.h  opencastSettings.cpp  opencastSettings.h
src/ui/: dialogopencast.ui  infoBox.ui  opencastSettings.ui
